# sdk-ruby

./: .gitignore  .rubocop.yml  Cargo.toml  Gemfile  LICENSE  Makefile  README.md  Rakefile  Steepfile  restate-sdk.gemspec  shell.nix
.github/workflows/: ci.yaml  docker.yaml  integration.yaml  release.yml
docs/: INTERNALS.md  USER_GUIDE.md
etc/: run-integration-tests.sh  run-verification.sh  smoke-test.sh
etc/verification/: env.json  params.json
examples/: README.md  config.ru  deadlock_detection.rb  durable_execution.rb  greeter.rb  introspection.rb  middleware.rb  service_communication.rb  service_configuration.rb  typed_handlers.rb  typed_handlers_sorbet.rb  virtual_objects.rb  workflow.rb
ext/restate_internal/: Cargo.toml  extconf.rb
ext/restate_internal/src/: lib.rs
lib/: restate.rb
lib/restate/: client.rb  config.rb  context.rb  discovery.rb  durable_future.rb  endpoint.rb  errors.rb  handler.rb  introspection.rb  railtie.rb  serde.rb  server.rb  server_context.rb  service.rb  service_dsl.rb  service_proxy.rb  testing.rb  vm.rb  (+3 more)
middleware_example/: Gemfile  README.md  config.ru  opentelemetry_middleware.rb  payment_service.rb  tenant_middleware.rb  test.rb
rbi/: restate-sdk.rbi
sig/: restate.rbs
sorbet/: config
spec/: callable_headers_spec.rb  harness_spec.rb  introspection_spec.rb  or_timeout_spec.rb  server_context_outbound_middleware_spec.rb
template/: AGENTS.md  CLAUDE.md  Gemfile  Makefile  README.md  codex.md  config.ru  greeter.rb
test-services/: .env  Dockerfile  Gemfile  config.ru  entrypoint.sh  exclusions.yaml  services.rb
(+25 files in other folders)
