[package]
name = "restate_internal"
version = "0.4.4"
edition = "2021"
publish = false

[lib]
name = "restate_internal"
crate-type = ["cdylib"]
doc = false

[dependencies]
magnus = { version = "0.8", features = ["rb-sys"] }
rb-sys = { version = "0.9", features = ["stable-api-compiled-fallback"] }
restate-sdk-shared-core = { version = "=0.7.0", features = ["request_identity", "sha2_random_seed"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
